Revamp verifier demo into realistic e-commerce storefront
Replace the scenario-picker demo with a full EuroStore shopping experience:
- Product catalogue with 8 items across 5 categories (alcohol, wellness, events, gaming, finance)
- Category filter tabs, product cards with emoji imagery and gradient backgrounds
- Realistic checkout flow with pre-filled shipping, payment methods, VAT calculation
- EUDI wallet verification modal with QR code, phone mockup, approve/decline simulation
- Order confirmation and failure views with verification result breakdown
- Full mobile responsiveness: safe area insets, 44px touch targets, scroll lock, stacked layouts
- SDK code snippet and CTA on result page

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet" />
-    <title>WalletGate — EUDI Wallet Verifier Demo</title>
-    <meta name="description" content="Try EU Digital Identity Wallet verification live. Configure checks, scan a QR code, and see results in real time. No signup required." />
+    <title>EuroStore — Age-Verified Shopping Demo | WalletGate</title>
+    <meta name="description" content="Experience EUDI wallet verification in a realistic e-commerce checkout. Browse age-restricted products, verify your identity, and complete your purchase." />
   </head>
   <body>
     <div id="root"></div>
