Add SEO metadata and crawl files for demo site

--- a/index.html
+++ b/index.html
@@ -9,6 +9,39 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet" />
     <title>EuroStore — Age-Verified Shopping Demo | WalletGate</title>
     <meta name="description" content="Experience EUDI wallet verification in a realistic e-commerce checkout. Browse age-restricted products, verify your identity, and complete your purchase." />
+    <meta name="keywords" content="EUDI demo, digital identity wallet demo, OpenID4VP demo, age verification demo, eIDAS 2.0 demo, WalletGate demo, EUDI SDK demo" />
+    <meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1" />
+    <link rel="canonical" href="https://demo.walletgate.app/" />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="WalletGate Demo" />
+    <meta property="og:title" content="EuroStore Demo — EUDI Wallet Verification in Action" />
+    <meta property="og:description" content="Try WalletGate's realistic e-commerce verification demo: age-gated checkout powered by EUDI wallet flows." />
+    <meta property="og:url" content="https://demo.walletgate.app/" />
+    <meta property="og:image" content="https://demo.walletgate.app/favicon.svg" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@walletgate" />
+    <meta name="twitter:title" content="EuroStore Demo — EUDI Wallet Verification in Action" />
+    <meta name="twitter:description" content="Try WalletGate's realistic e-commerce verification demo powered by EUDI wallet flows." />
+    <meta name="twitter:image" content="https://demo.walletgate.app/favicon.svg" />
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebApplication",
+        "name": "WalletGate EuroStore Demo",
+        "url": "https://demo.walletgate.app/",
+        "applicationCategory": "BusinessApplication",
+        "operatingSystem": "Web",
+        "description": "Interactive EUDI wallet verification demo for age-gated checkout flows.",
+        "publisher": {
+          "@type": "Organization",
+          "name": "WalletGate",
+          "url": "https://www.walletgate.app/"
+        }
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
