Update demo copy: identity-verified headline, partial button label, broader SEO

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet" />
-    <title>EuroStore — Age-Verified Shopping Demo | WalletGate</title>
-    <meta name="description" content="Experience EUDI wallet verification in a realistic e-commerce checkout. Browse age-restricted products, verify your identity, and complete your purchase." />
+    <title>EuroStore — Identity-Verified Shopping Demo | WalletGate</title>
+    <meta name="description" content="Experience EUDI wallet verification in a realistic e-commerce checkout. Browse products requiring age, residency, or identity checks and complete your purchase." />
     <meta name="keywords" content="EUDI demo, digital identity wallet demo, OpenID4VP demo, age verification demo, eIDAS 2.0 demo, WalletGate demo, EUDI SDK demo" />
     <meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1" />
     <link rel="canonical" href="https://demo.walletgate.app/" />
@@ -16,7 +16,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="WalletGate Demo" />
     <meta property="og:title" content="EuroStore Demo — EUDI Wallet Verification in Action" />
-    <meta property="og:description" content="Try WalletGate's realistic e-commerce verification demo: age-gated checkout powered by EUDI wallet flows." />
+    <meta property="og:description" content="Try WalletGate's realistic e-commerce verification demo: age, residency, and identity checks powered by EUDI wallet flows." />
     <meta property="og:url" content="https://demo.walletgate.app/" />
     <meta property="og:image" content="https://demo.walletgate.app/favicon.svg" />
 
@@ -34,7 +34,7 @@
         "url": "https://demo.walletgate.app/",
         "applicationCategory": "BusinessApplication",
         "operatingSystem": "Web",
-        "description": "Interactive EUDI wallet verification demo for age-gated checkout flows.",
+        "description": "Interactive EUDI wallet verification demo for age, residency, and identity checkout flows.",
         "publisher": {
           "@type": "Organization",
           "name": "WalletGate",
